<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextCantidad"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="30dp"
        android:background="#E96A6A"
        android:hint="@string/hint_cantidad"
        android:inputType="numberDecimal"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/editTextCantidad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/radioDolares"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dolares"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radioSoles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/soles"/>

        <RadioButton
            android:id="@+id/radioEuro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/euro"/>

        <RadioButton
            android:id="@+id/radioLibra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/libra"/>

        <RadioButton
            android:id="@+id/radioRupia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rupia"/>

        <RadioButton
            android:id="@+id/radioReal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/real"/>

        <RadioButton
            android:id="@+id/radioPeso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/peso"/>

        <RadioButton
            android:id="@+id/radioYuan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yuan"/>

        <RadioButton
            android:id="@+id/radioYen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yen"/>

    </RadioGroup>

    <Button
        android:id="@+id/btnConvertir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#4D28A0"
        android:text="@string/convertir"
        android:textColor="#FFFFFF"
        android:onClick="miClicManejador"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>